Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -6180,10 +6180,6 @@ ConversationListView {
 .thunar toolbar.horizontal button image {
   -gtk-icon-transform: scale(0.72); }
 
-scrolledwindow.sidebar treeview.view {
-  background: #0d0f17;
-  padding: 1.5px; }
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar .path-bar-button,
 .thunar toolbar .path-bar-button {
@@ -6228,10 +6224,12 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
   border-bottom: 1px solid #00A9A5; }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view {
+.thunar scrolledwindow.sidebar treeview.view {
+  background: #0d0f17;
+  padding: 1.5px;
   border-radius: 0;
   box-shadow: none; }
-  window.thunar paned > scrolledwindow treeview.view:hover, window.thunar paned > scrolledwindow treeview.view:selected {
+  .thunar scrolledwindow.sidebar treeview.view:hover, .thunar scrolledwindow.sidebar treeview.view:selected {
     background: #1a1e2d;
     color: #cccfd0; }
 
